--- a/SaoRoque/Equipamentos/templates/cadastrar_computador.html
+++ b/SaoRoque/Equipamentos/templates/cadastrar_computador.html
@@ -2,7 +2,7 @@
 
 {% load bootstrap %}
 
-{% block title %}Cadastrar Adquirente{% endblock %}
+{% block title %}Cadastrar Computador{% endblock %}
 
 {% block content %}
     <div class="container">
